Added to save tracking data

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "yolov3_.ipynb",
+      "name": "yolov3_sort.ipynb ",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -35,6 +35,7 @@
         "\n",
         "#Youtubeダウンローダーをインストール\n",
         "!pip install youtube-dl\n",
+        "!pip install moviepy\n",
         "\n",
         "%cd /content/Object_Tracking/Object-Detection-and-Tracking/OneStage/yolo/deep_sort_yolov3/model_data/ \n",
         "!wget https://pjreddie.com/media/files/yolov3.weights\n",
@@ -56,8 +57,20 @@
         "!mkdir test_video\n",
         "!mkdir output\n",
         "%cd test_video\n",
-        "!youtube-dl \"https://www.youtube.com/watch?v=mG-H1d6fvoo\"\n",
-        "!mv *.mp4 test.mp4\n"
+        "!youtube-dl \"https://www.youtube.com/watch?v=b5PKfvMS_xU\"\n",
+        "!mv *.mp4 test.mp4\n",
+        "import cv2\n",
+        "file_path = 'test.mp4'\n",
+        "cap = cv2.VideoCapture(file_path)\n",
+        "print(cap.get(cv2.CAP_PROP_FPS))\n",
+        "\n",
+        "from moviepy.editor import *\n",
+        "file_path = \"test.mp4\"#編集したい動画のパス\n",
+        "start = 134#切り出し開始時刻。秒で表現\n",
+        "end = 164#切り出し終了時刻。同じく秒で表現\n",
+        "save_path = \"sample_cut.mp4\"#編集後のファイル保存先とパス\n",
+        "video = VideoFileClip(file_path).subclip(start, end)#ビデオのカット開始\n",
+        "video.write_videofile(save_path,fps=30) # Many options...#書き込み"
       ],
       "execution_count": 0,
       "outputs": []
@@ -71,7 +84,22 @@
       },
       "source": [
         "%cd /content/Object_Tracking/Object-Detection-and-Tracking/OneStage/yolo/deep_sort_yolov3\n",
-        "!python main.py -c person -i ./test_video/test.mp4"
+        "!python main.py -c person -i ./test_video/sample_cut.mp4"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JUAQC8jbUS97",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pickle\n",
+        "f = open('sample.binaryfile','rb')\n",
+        "pickle.load(f)"
       ],
       "execution_count": 0,
       "outputs": []
